syntax = "proto3";

// Creates separate .java files for message and service
// instead of creating them inside the class defined by
// java_outer_classname
option java_multiple_files = true;

// Class that will contain descriptor
option java_outer_classname = "ReservationServiceProto";

// The package where the generated classes will reside
option java_package = "nl.toefel.reservations";

// required to add annotations to the rpc calls
import "google/api/annotations.proto";

package reservations;

service ReservationService {

    rpc CreateReservation(Reservation) returns (CreateReservationResponse) {
        option(google.api.http) = {
            post: "/v1/reservations"
            body: "*"
        };
    }

    rpc GetReservation(GetReservationRequest) returns (Reservation) {
        // {id} is mapped into the GetReservationRequest.id field!
        option (google.api.http) = {
            get: "/v1/reservations/{id}"
        };
    }

    rpc DeleteReservation(DeleteReservationRequest) returns (DeleteReservationResponse) {
        // {id} is mapped into the DeleteReservationRequest.id field!
        option (google.api.http) = {
            delete: "/v1/reservations/{id}"
        };
    }

}

message Reservation {
    string id = 1;
    string title = 2;
    string venue = 3;
    string timestamp = 4;
    int32 attendees = 6;
}

message GetReservationRequest {
    string id = 1;
}

message CreateReservationResponse {
    Reservation reservation = 1;
}

message DeleteReservationRequest {
    string id = 1;
}

message DeleteReservationResponse {

}
